2016-09-26 Added events on pause and pause command in Audio module
2016-09-21 Added test from Programming Code Prompt
2016-09-21 Added Progamming Code Prompt addon. Added Grid Scene addon. Added static list property.
2016-09-21 Fixed issue with moved droppable area in Connection module
2016-09-21 Fixed setting gap size in Table module
2016-09-19 Fixed issue with missing arguments in function in Paragraph addon
2016-09-19 Added default property to addons: Table, Puzzle, feedback, PieChart, TrueFalse, TextAudio, MenuPanel, MultiAdui, Text_Selection, Variable_storage, text_identification, Double_State_Button, WrittingCalculations, Single_state_Button, SelectableAddonsBinder, Multiple_Audio_Controls_Binder
2016-09-14 Added new property buttons width and buttons number in Assessments Navigation Bar addon
2016-09-08 Fixed checking pages scores in Navigation Bar module
2016-08-30 Fixed issue with relative urls in css and eKeyboard styling
2016-08-30 Added function addonIsLoaded to Content, Fixed bug with thumbnail in YouTube Addon
2016-08-30 Added hiding subtitles in Video module
2016-08-29 Fixed problem with Player crashes when properties "static header" / "static footer" are marked and lesson doesn't have header / footer
2016-08-24 Added notification functions and pages limit to Content.
2016-08-19 Updated tinymce library from version 4.0b2 to 4.4.0, fixed memory leaks issues in Paragraph and Paragraph_eKeyboard
2016-08-18 Fixed ant build scripts issues with paths for Ubuntu platform
2016-08-18 Added fetching all libraries in 1 reuqest, addons xml loaded in 1 request
2016-08-11 Added exchange URL to scheme-less URL in addon descriptor factory
2016-08-09 Added new addon IFrame
2016-08-04 Added Target type property in External Link Button module
2016-08-03 Fixed displaying viewBox in SVG module
2016-08-03 Fixed checking answers in Memo Game module
2016-08-02 Added compiled Commons library in version 4.0.0 to icplayer libs
2016-08-02 Removing loading-screen from commons