@@ -1,3 +1,4 @@
+2016-09-27 Fixed displaying animation with transparent background in Animation module
 2016-09-26 Added events on pause and pause command in Audio module
 2016-09-21 Added test from Programming Code Prompt
 2016-09-21 Added Progamming Code Prompt addon. Added Grid Scene addon. Added static list property.
